# ttyper

./: .gitignore  Cargo.toml  LICENSE.md  PKGBUILD  README.md  build.rs  flake.nix
.github/: FUNDING.yml
.github/workflows/: deploy.yml  rust.yml  tagged-release.yml
npm/: install.js  package-lock.json  package.json  runner.js
resources/language/: english100  english1000  english200
resources/runtime/language/: advanced1000  advanced2000  c  cpp  csharp  dutch1000  english-ngrams  english-pirate  english200  french  french100  french1000  french200  galician  german  german1000  german10000  html  java  javascript  korean100  korean200  norwegian  php  portuguese  portuguese-advanced  portuguese1000  portuguese200  python  qt  ruby  russian  russian1000  russian10000  rust  spanish  sql  thai  ukrainian
src/: config.rs  contents.rs  csv.rs  key.rs  language.rs  main.rs  opt.rs  pumper.rs  save.rs  ui.rs
src/test/: contents.rs  mod.rs  results.rs
src/trial/: history.rs  mod.rs
