[package]
name = "ttyper"
description = "Terminal-based typing test."
version = "1.5.0"
readme = "README.md"
repository = "https://github.com/max-niederman/ttyper.git"
homepage = "https://github.com/max-niederman/ttyper"
license = "MIT"
authors = ["Max Niederman <max@maxniederman.com>"]
edition = "2021"

[dependencies]
clap = { version = "^4.5", features = ["derive"] }
dirs = "^5.0"
crossterm = "^0.27"
rust-embed = "^8.2"
toml = "^0.8"

[dependencies.ratatui]
version = "^0.25"

[dependencies.rand]
version = "^0.8"
features = ["alloc"]

[dependencies.serde]
version = "^1.0"
features = ["derive"]

[build-dependencies]
dirs = "^5.0"
